# pmpp-on-the-web

./: Cargo.toml  README.md
src/: lib.rs  main.rs  shader.wgsl
src/ch_02/: solutions.md
src/ch_03/: mmul_by_col.wgsl  mmul_by_row.wgsl  mod.rs  solutions.md
